--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>XUAN GU PORTFOLIO</title>
+		<title>XUAN GU</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>XUAN GU<br />
-						PORTFOLIO</h1>
+						</h1>
 						<p>Mathematics major and Economics minor from UBC, skilled in SQL, Python, Tableau, Excel, Java, C++ and R <a href="https://www.linkedin.com/in/xuan-gu-720ab8192/">@Xuan Gu</a> </p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -82,9 +82,21 @@
 										</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/xuan.gu5165/viz/coviddashboard_16716243812360/Dashboard1?publish=yes" class="image fit"><img src="images/Screenshot 2023-01-06 at 6.43.51 PM.png" alt="" /></a>
-									<p>Continued analysis of first project, using Tableau for visualizations .</p>
+									<p>Continued analysis of the previous project, using Tableau for visualizations .</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/xuan.gu5165/viz/coviddashboard_16716243812360/Dashboard1?publish=yes" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+						
+										<h2><a href="https://github.com/XuanGuW/project_2_t8u2b">Library System Simulation<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/XuanGuW/project_2_t8u2b" class="image fit"><img src="images/library-419254_1920.jpg" alt="" /></a>
+									<p>Use java to create an library borrrowing and lending system.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/XuanGuW/project_2_t8u2b" class="button">View Project</a></li>
 									</ul>
 								</article>
 							
